--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>赛车游戏H5-基于lufylegend引擎</title>
+    <title>赛车游戏H5-基于lufylegend引擎1111</title>
     <meta name="keywords" content="H5赛车游戏 lufylegend"/>
     <meta name="description" content=" "/>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
